Fixed <p> and any adjacent element spacing
A paragraph and any adjacent element should have margin between them, but not below the second element. Corrected this rule which used to read:
* + p,
p + * {
  margin: 1em 0;
}

Now reads:
* + p,
p + * {
  margin: 1em 0 0 0;
}
to create only top margin for the second of the adjacent siblings.

--- a/normalize.css
+++ b/normalize.css
@@ -34,7 +34,7 @@ html, body {
  ******************************/
 * + p,
 p + * {
-  margin: 1em 0;
+  margin: 1em 0 0 0;
 }
 /**/
 
